force-app/main/default/objects/ContenedorDePedido__c/fields/Cerrado__c.field-meta.xml
<CustomField>
    <fullName>Cerrado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cerrado</label>
    <type>Checkbox</type>
</CustomField>