force-app/main/default/objects/ContenedorDePedido__c/fields/NumeroDeSelloDeContenedor__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeSelloDeContenedor__c</fullName>
    <label>Número de sello del contenedor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>