force-app/main/default/objects/ContenedorDePedido__c/fields/TipoDeContenedor__c.field-meta.xml
<CustomField>
    <fullName>TipoDeContenedor__c</fullName>
    <label>Tipo de contenedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>CFS</fullName>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 GP</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>40 GP</label>
            </value>
            <value>
                <fullName>40HQ</fullName>
                <label>40 HQ</label>
            </value>
            <value>
                <fullName>40 NOR</fullName>
            </value>
            <value>
                <fullName>NOR</fullName>
                <isActive>false</isActive>
                <label>NOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>